# Hotel-Booking

./: .coverage  .gitignore  mypy.ini  pyproject.toml  readme.md  requirements.txt  setup.sh
scripts/: run.sh  seed.py  tests.sh
src/api/: main.py
src/api/dependencies/: db.py
src/api/routes/: booking_routes.py
src/api/schemas/: booking_schema.py  guest_schema.py  room_schema.py
src/application/dtos/: booking_dto.py
src/application/interfaces/: booking_repository.py  guest_repository.py  payment_service.py  room_repository.py
src/application/use_cases/: cancel_booking.py  check_in_booking.py  check_out_booking.py  check_room_availability.py  create_booking.py  get_booking_by_reference.py  guest_booking_history.py  register_guest.py
src/domain/: enums.py  exceptions.py
src/domain/entities/: booking.py  guest.py  room.py
src/domain/value_objects/: booking_reference.py  guest_age.py  stay_duration.py
src/infrastructure/: db.py
src/infrastructure/models/: booking_model.py  guest_model.py  room_model.py
src/infrastructure/repositories/: booking_repository_impl.py  guest_repository_impl.py  room_repository_impl.py
src/infrastructure/services/: mock_payment_service.py
tests/application/: test_cancel_booking.py  test_check_in_booking.py  test_check_out_booking.py  test_check_room_availability.py  test_create_booking.py  test_get_booking_by_reference.py  test_guest_booking_history.py  test_register_guest.py
