[project]
name = "hotel_booking_system"
version = "0.1.0"
description = "A clean architecture-based Hotel Booking System built with Python."
authors = [
    { name = "Gautam Sharma", email = "youremail@example.com" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # core dependencies
]

[tool.uv]
# UV manages dependencies automatically

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations"
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "C90",# mccabe
]
ignore = ["E501"]  # Ignore long lines for now

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
